@@ -33,6 +33,7 @@ MainWindow::MainWindow (QWidget *parent)
 , pSystray (NULL)
 , oContacts (this)
 , oInbox (gvApi, this)
+, bBeginPlayAfterLoad (false)
 , vmailPlayer (NULL)
 , nwMgr (NULL)
 , statusTimer (this)
