@@ -1,5 +1,10 @@
 #summary Change log
 
+*2012-07-16*
+ * Voicemail funkiness fixed
+ * Contacts list images were sometimes not seen
+ * Probably fixed the Symbian Belle FP1 bug.
+
 *2012-06-23*
  * Long press for full refresh (inbox and contacts)
  * Login failure at rnr_se: Fixed this code path to work correctly.
