@@ -1,3 +1,4 @@
-  * Long press for full refresh (inbox and contacts)
-  * Login failure at rnr_se: Fixed this code path to work correctly.
+  * Voicemail funkiness fixed
+  * Contacts list images were sometimes not seen
+  * Probably fixed the Symbian Belle FP1 bug.
 
